plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__typescript_const_variable.snap
---
source: plugins/source/src/syntax/tests.rs
assertion_line: 107
expression: "decompose(\"ts\", \"export const API_URL = 'https://example.com';\\n\")"
---
[
    Fragment {
        name: "API_URL",
        kind: Symbol(
            Variable,
        ),
        byte_range: 0..45,
        signature: Some(
            "export const API_URL = 'https://example.com'",
        ),
        visibility: Some(
            "export",
        ),
        metadata: None,
        name_byte_offset: 0,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
