plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__typescript_decompose_function_and_interface.snap
---
source: plugins/source/src/syntax/tests.rs
assertion_line: 87
expression: "decompose(\"ts\", source)"
---
[
    Fragment {
        name: "greet",
        kind: Symbol(
            Function,
        ),
        byte_range: 0..81,
        signature: Some(
            "export function greet(name: string): void",
        ),
        visibility: Some(
            "export",
        ),
        metadata: None,
        name_byte_offset: 16,
        children: [],
        parent_name: None,
        fs_name: None,
    },
    Fragment {
        name: "Config",
        kind: Symbol(
            Interface,
        ),
        byte_range: 83..139,
        signature: Some(
            "interface Config",
        ),
        visibility: None,
        metadata: None,
        name_byte_offset: 93,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
