plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__typescript_enum_declaration.snap
---
source: plugins/coding/src/syntax/tests.rs
assertion_line: 125
expression: "decompose(\"ts\", \"export enum Color {\\n    Red,\\n    Green,\\n    Blue,\\n}\\n\")"
---
[
    Fragment {
        name: "Color",
        kind: Symbol(
            Enum,
        ),
        byte_range: 0..51,
        signature: Some(
            "export enum Color",
        ),
        visibility: Some(
            "export",
        ),
        metadata: None,
        name_byte_offset: 12,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
